--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -1,5 +1,6 @@
 <script>
   $("body").removeClass("background-grey");
+  $(".browser-contents").attr('style','margin-top:24vh;');
 </script>
 	<% i=1
     @merchant.each do |record|
