--- a/app/views/front/frame/_contents-frame.html.erb
+++ b/app/views/front/frame/_contents-frame.html.erb
@@ -1,5 +1,5 @@
-<div class="tag-browser">
-  <%= render "front/items/tag_browser" %>
+<div class="notibar">
+  <%= render "front/items/notibar" %>
 </div>
 <div class="browser-contents">
   <%= render "front/items/contents" %>
