--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -1,5 +1,6 @@
 <script>
   $("body").addClass("background-grey");
+  $(".browser-contents").attr('style','margin-top:17vh;');
 </script>
 <div class="body-divide">
   <% @product1.each do |record| %>
