--- a/app/views/front/likelist/_contents-shop-frame.html.erb
+++ b/app/views/front/likelist/_contents-shop-frame.html.erb
@@ -2,10 +2,13 @@
     switcher = false;
     end_param = false;
     $(".body-divide").attr('style','padding-bottom:15%;')
-    <% if @userlikeshops.empty? %>
+    <% if current_user.nil? %>
     $(".login-modal").modal('show');
     <% end %>
 </Script>
 <div class="browser-contents" style="margin-top:9vh;">
   <%= render "front/browse/contents" %>
 </div>
+<script>
+    $(".browser-contents").attr('style','margin-top:9vh;');
+</script>
