--- a/app/views/front/likelist/_contents-item-frame.html.erb
+++ b/app/views/front/likelist/_contents-item-frame.html.erb
@@ -4,12 +4,14 @@
   window.scrollTo(0,0);
   $(".body-divide").attr('style','padding-bottom:15%;')
   <% if current_user.nil? %>
-    $(".login-modal").modal('show');
+    $(".likelist").addClass('likelist-item-empty');
+  <% elsif current_user.userlikeitems.where(:active=>true).empty? %>
+    $(".likelist").addClass('likelist-item-empty');
   <% end %>
 </Script>
-<div class="browser-contents" style="margin-top:9vh;">
+<div class="browser-contents likelist" style="margin-top:9vh;">
   <%= render "front/items/contents" %>
 </div>
 <script>
-    $(".browser-contents").attr('style','margin-top:9vh;');
+    $(".browser-contents").attr('style','margin-top:9vh;height:84%;');
 </script>
