--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -158,6 +158,41 @@ z-index: 10;
   text-align: center;
   color:white;
 }
+
+//search - notibar replce
+.search-input{
+  float:left;
+  width:85%;
+  height:100%;
+}
+.search-input>input{
+  width: 100%;
+  height: 100%;
+  border: none;
+  text-align: center;
+  box-shadow: inset 1px 1px 3px 0px grey;
+}
+.search-submit{
+  float:left;
+  width:25%;
+  height:100%;
+}
+.search-submit>div{
+  width:80%;
+  height:100%;
+  margin:auto;
+  border-radius:3px;
+  border:grey 1px solid;
+}
+.search-end{
+  text-align:center;
+  float:left;
+  color:rgba(0,0,0,0.4);
+  line-height:40px;
+  width:15%;
+  height:100%;
+}
+
 // tag-browser
 
 .tag-browser{
@@ -379,6 +414,21 @@ margin-top:17vh;
 }
 .etc-clicked{
   background-image: url("/assets/ICON/footer/etc-clicked.png");
+}
+
+//modal
+
+.close-modal{
+  position:fixed;
+  top:2%;
+  right:3%;
+  color:white;
+  font-size:2em;
+  font-weight:600;
+  z-index:1;
+}
+.close-modal>span{
+
 }
 
 //shop-product list modal
@@ -682,7 +732,7 @@ margin-top:17vh;
   width: 33%;
 }
 .option-horizon{
-  height:16.5%;
+  height:16%;
 }
 //kjj품리스트
 .contents-scroll{
