--- a/app/views/front/frame/_top_bar.html.erb
+++ b/app/views/front/frame/_top_bar.html.erb
@@ -1,6 +1,5 @@
   <div class="itemfilter-button" onclick="item_filter_popup()"></div>
-  <div class="itemsearch-button" onclick="item_search()"></div>
-  <div class="itemsearch-input"></div>
+  <div class="itemsearch-button" onclick="item_search_toggle(true)"></div>
 	<span class=service-title>내 그릇장</span>
 
 
