--- a/app/views/front/modal/intro/_ask.html.erb
+++ b/app/views/front/modal/intro/_ask.html.erb
@@ -10,15 +10,28 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
+          <div class="close-modal" onclick="$('.modal').modal('hide');">
+            <span>&times;</span>
+          </div>
           <% (0..3).each do |x| %>
           <div class="item" style="background-image:url('/assets/intro/ask_0<%= x+1%>.jpg');">
+          <% if x==0 %>
+            <div class="option-padding" style="height:26%">
+              <span onclick="carousel_prev()" style="display:none;"><</span>
+            </div>
+            <% (0..2).each do |y| %>
+            <div class="option-horizon" style="height:22%;" onclick="set_option(<%=x%>,<%=y%>)"></div>
+            <% end %>
+          </div>
+          <% else %>
             <div class="option-padding">
               <span onclick="carousel_prev()" style="display:none;"><</span>
             </div>
             <% (0..2).each do |y| %>
-            <div class="option-horizon" onclick="set_option(<%=x%>,<%=y%>)"></div>
+                <div class="option-horizon" onclick="set_option(<%=x%>,<%=y%>)"></div>
             <% end %>
-          </div>
+            </div>
+          <% end%>
           <% end %>
 
         </div>
