--- a/app/views/front/items/_item_search.html.erb
+++ b/app/views/front/items/_item_search.html.erb
@@ -8,6 +8,8 @@
 </div>
 
 <script>
+    switcher = false;
+    end_param = false;
  $(".search-input>input").first().keypress(function (e) {
      var key = e.which;
      if(key == 13)  // the enter key code
@@ -17,7 +19,10 @@
          $(".search-input>input").first().val('');
          window.scrollTo(0,0);
 
-         $(".browser-contents").load("/search_item?keyword="+keyword,function(){});
+         $(".browser-contents").load("/search_item?keyword="+keyword,function(){
+             $(".body-divide").attr('style','padding-bottom:15%;')
+
+         });
          return false;
      }
  });
