--- a/app/views/front/modal/_login.html.erb
+++ b/app/views/front/modal/_login.html.erb
@@ -11,7 +11,7 @@
           <a href="/users/auth/kakao">
             <div class="ask-step">
               <div onclick="">
-                <img src="/assets/intro/logos/kakao.png"  width=35px />
+                <img src="/assets/intro/logos/kakao.png"  width=25px />
                 카카오톡
               </div>
             </div>
@@ -26,13 +26,13 @@
           <a href="/users/auth/facebook">
             <div class="ask-step">
               <div onclick="">
-                <img src="/assets/intro/logos/facebook.png" width=20px />
+                <img src="/assets/intro/logos/facebook.png" width=17px />
                 페이스북</div>
             </div>
           </a>
         </div>
-        <div class="face-footer">
-          <div onclick="$('.modal').modal('hide');">로그인 없이 둘러보기 <span>></span></div>
+        <div class="face-footer" onclick="$('.modal').modal('hide');">
+          <div >로그인 없이 둘러보기 <span>></span></div>
         </div>
       </div>
     </div>
