--- a/app/views/front/modal/intro/_intro.html.erb
+++ b/app/views/front/modal/intro/_intro.html.erb
@@ -12,8 +12,8 @@
             <div onclick="call_login()">로그인/무료회원가입</div>
           </div>
         </div>
-        <div class="face-footer">
-          <div onclick="$('.modal').modal('hide');">로그인 없이 둘러보기 <span>></span></div>
+        <div class="face-footer" onclick="$('.modal').modal('hide');">
+          <div >로그인 없이 둘러보기 <span>></span></div>
         </div>
       </div>
     </div>
