--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -620,8 +620,7 @@ margin-top:17vh;
 
 }
 .login-icon{
-  width:30px;
-  height:30px;
+  width:23px;
 }
 .login-footer{
   padding-right: 3%;
@@ -689,7 +688,9 @@ margin-top:17vh;
     vertical-align: middle;
     text-align: center;
     color: white;
-    font-size:1.2em;
+  }
+  .ask-step>div>img{
+    padding-bottom:2px;
   }
 .login-step{
   color:white;
@@ -707,7 +708,7 @@ margin-top:17vh;
   font-size: 1.2em;
   text-align: right;
   position: fixed;
-  height: 6%;
+  height: 8%;
   bottom: 0;
   width: 100%;
   right: 0;
