--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,8 +51,8 @@
 
     //샵 선택시 모달 팝업 및 모달 히스토리 설정
     function shop_product_popup(id){
-        window.history.pushState({},"shopopen","");
         var id = id;
+        window.history.pushState("","","");
         $(".shop-product-popup").load("/shop_product/"+id,function(id){
             $(".shop-product-popup").modal('show');
         });
@@ -111,10 +111,21 @@
     <%= yield %>
   </body>
 <script>
-    $("a").on("click",function(){
+    $(".modal-product-item>a").on("click",function(){
         document.cookie = "intro_switch=false";
         console.log("a clicked");
         window.history.pushState({},"lastscroll","");
+    });
+    $('.modal').on('show.bs.modal', function(e) {
+        window.location.hash = "modal";
+    });
+    $('.modal').on('hide.bs.modal',function(e){
+        window.location.hash = "";
+    });
+    $(window).on('hashchange', function (event) {
+        if(window.location.hash != "#modal") {
+            $('.modal').modal('hide');
+        }
     });
 </script>
 </html>
