--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -1,6 +1,7 @@
 <script>
   $("body").addClass("background-grey");
   $(".browser-contents").attr('style','margin-top:17vh;');
+  window.location.hash = "";
 </script>
 <div class="body-divide">
   <% @product1.each do |record| %>
