login and sjdaksdj

--- a/app/views/front/modal/intro/_ask.html.erb
+++ b/app/views/front/modal/intro/_ask.html.erb
@@ -64,7 +64,9 @@
 
 
                 });
-                $(".carousel").carousel(0);
+                window.setTimeout(function(){
+                    $(".carousel").carousel(0);
+                },1000)
                 }
 
             });
