--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -748,7 +748,8 @@ margin-top:17vh;
 
 //likelist
 .likelist{
-  background-size: 95% 100%;
+  background-size: 95%;
+  background-repeat:no-repeat;
   background-position: center;
 }
 
