--- a/app/views/front/likelist/_contents-shop-frame.html.erb
+++ b/app/views/front/likelist/_contents-shop-frame.html.erb
@@ -4,8 +4,10 @@
     $(".body-divide").attr('style','padding-bottom:15%;')
     <% if current_user.nil? %>
       $(".likelist").addClass('likelist-shop-empty');
+      $(".likelist>div").attr("style","");
     <% elsif current_user.userlikeshops.where(:active=>true).empty? %>
       $(".likelist").addClass('likelist-shop-empty');
+      $(".likelist>div").attr("style","");
     <% end %>
 </Script>
 <div class="browser-contents likelist" style="margin-top:9vh;">
