--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -758,6 +758,7 @@ margin-top:17vh;
 }
 .likelist-shop-empty{
   background-image:url(/assets/likelist-shop.png);
+  background-color:#e9e9e9;
 }
 
   //outlink
