--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -125,6 +125,7 @@ z-index: 10;
   background: #e9e9e9;
   z-index: 3;
   padding:2%;
+  box-shadow: 1px 1px 8px grey;
 
 }
 .noti-tag{
@@ -203,6 +204,7 @@ position:fixed;
 top:8.9vh;
 background: white;
 z-index: 3;
+box-shadow:1px 1px 8px grey;
 
 }
 
@@ -304,6 +306,7 @@ margin-top:17vh;
       background-position: center;
 
     }
+
     .likebutton-shop-clicked{
       background-image: url("/assets/ICON/shoplike-clicked.png");
     }
@@ -448,7 +451,7 @@ margin-top:17vh;
 }
   .modal-header{
     padding:0;
-    height:9%;
+    height:9vh;
     background-color:#ff7171;
     color:white;
     -webkit-transition: all 0.4s ease;
@@ -462,6 +465,12 @@ margin-top:17vh;
       float:left;
       width:15%;
       height:100%;
+    }
+    .modal-header-right{
+      float:left;
+      width:15%;
+      height:100%;
+
     }
       .backbutton{
         float:left;
@@ -531,6 +540,15 @@ margin-top:17vh;
           background-size: 55%;
           background-repeat: no-repeat;
           background-position: right top;
+        }
+        .likebutton-item-modal{
+          width:15%;
+          height:100%;
+          float:left;
+          background-image: url(/assets/ICON/like.png);
+          background-size: 55% 55%;
+          background-repeat:no-repeat;
+          background-position: center;
         }
         .likebutton-item-clicked{
           background-image:url("/assets/ICON/like-touch.png");
@@ -761,6 +779,95 @@ margin-top:17vh;
   background-color:#e9e9e9;
 }
 
+//item focus
+.item-focus-header{
+  width:100%;
+  height:48%;
+  position:fixed;
+  background:white;
+  z-index: 1;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  box-shadow: 1px 1px 9px 0px grey;
+}
+.item-focus-title{
+  padding: 0;
+  height: 9vh;
+  color: rgba(0,0,0,0.6);
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.item-foucs-title-text{
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  display: table;
+}
+.item-foucs-title-text>span{
+  display: table-cell;
+  vertical-align: middle;
+  width:100%;
+  font-size: 1.2em;
+}
+.item-header-body{
+  height:82%;
+  padding:5%;
+}
+.item-header-body>div{
+  height: 100%;
+  width: 50%;
+  float:left;
+}
+.item-image{
+  border-radius:3px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  border:0.5px solid rgba(0,0,0,0.6);
+}
+.item-detail{
+  padding:0% 2%;
+  color:rgba(0,0,0,0.6);
+}
+.item-detail>div{
+  float:left;
+  height:33.3%;
+  width:100%;
+}
+.item-detail>.title{
+  display: table;
+  text-align: center;
+  font-size:1.2em;
+  height:33.4%;
+}
+.item-detail>.tags{
+  display: table;
+  text-align: center;
+}
+.item-detail>div>span{
+  display: table-cell;
+  vertical-align: middle;
+}
+.item-detail>.outlink>div{
+  border: 1px solid grey;
+  height: 60%;
+  width: 70%;
+  margin: auto;
+  border-radius:3px;
+  display:table;
+  text-align: center;
+}
+.item-detail>.outlink>div>a{
+  display: table-cell;
+  vertical-align: middle;
+  color:rgba(0,0,0,0.6);
+}
+
+.item-focus-dummy{
+  height:48%;
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+}
   //outlink
 
 .top-backnav{
