--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -1,12 +1,12 @@
 <script>
   $("body").addClass("background-grey");
-  $(".browser-contents").attr('style','margin-top:17vh;');
+  $(".browser-contents").attr('style','margin-top:16.5vh;');
   window.location.hash = "";
 </script>
 <div class="body-divide">
   <% @product1.each do |record| %>
       <div class="modal-product-item">
-      <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+      <a onclick="ga('send','event','product','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
           <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
       </a>
       <% if !@userlikeitems.include?(record.id)%>
@@ -14,7 +14,7 @@
       <% else %>
           <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
       <% end %>
-        <a href="<%=record.url%>">
+        <a onclick="ga('send','event','product','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
@@ -28,7 +28,7 @@
 <div class="body-divide">
   <% @product2.each do |record| %>
       <div class="modal-product-item">
-        <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+        <a onclick="ga('send','event','product','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
         </a>
         <% if !@userlikeitems.include?(record.id)%>
@@ -36,7 +36,7 @@
         <% else %>
             <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
         <% end %>
-        <a href="<%=record.url%>">
+        <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
             <div class="modal-product-detail">
                                                <span><%=record.title%></span><br>
                                                <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
