modal backbouttom history

--- a/app/views/front/modal/_product_filter.html.erb
+++ b/app/views/front/modal/_product_filter.html.erb
@@ -37,7 +37,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <div class="modal-header-left">
-        <div class="backbutton" data-dismiss="modal">
+        <div class="backbutton" onclick="window.history.back();">
 
           <span class="glyphicon glyphicon-menu-left"></span>
         </div>
