--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -4,7 +4,7 @@
     <div class="item-focus-header">
       <div class="item-focus-title">
         <div class="modal-header-left">
-          <div class="backbutton" data-dismiss="modal">
+          <div class="backbutton" onclick="window.history.back();">
 
             <span class="glyphicon glyphicon-menu-left"></span>
           </div>
