--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -17,16 +17,16 @@
           <!--<div class="modal-shoptags"></div>-->
         </div>
         <% if !@userlikeitems.include?(@input_record.id)%>
-            <div class="likebutton-item-modal" onclick="userlike(this,'item','<%= @input_record.id%>')"></div>
+            <div class="likebutton-item-modal" onclick="userlike(this,'item','<%= @input_record.id%>');hide_rcmd()"></div>
         <% else %>
-            <div class="likebutton-item-modal likebutton-item-clicked" onclick="userlike(this,'item','<%= @input_record.id%>')"></div>
+            <div class="likebutton-item-modal likebutton-item-clicked" onclick="userlike(this,'item','<%= @input_record.id%>');hide_rcmd()"></div>
         <% end %>
         <!--<div class="modal-header-section">-->
 
         <!--</div>-->
       </div>
       <div class="item-header-body">
-        <div class="item-image" style="background-image:url('<%=@input_record.img_url%>');"></div>
+        <div class="item-image" ></div>
         <div class="item-detail">
           <div class="title">
             <span><%=@input_record.merchant.title%></span>
@@ -45,8 +45,9 @@
         </div>
       </div>
     </div>
-    <div class="modal-body" style="height:100%;" id="item-rcmd-body">
+    <div class="modal-body overflow-y-hidden" style="height:100%;" id="item-rcmd-body">
       <div class="item-focus-dummy"></div>
+      <div class="item-focus-beforelogin" style=""><span>즐겨찾기에 추가하시면<br>추천 상품을 확인하실 수 있습니다</span></div>
       <div class="body-divide">
 
         <% @product1.each do |record| %>
@@ -108,4 +109,17 @@
         });
 
     });
+
+    function hide_rcmd(){
+//        $("#item-rcmd-body").attr("style","height:100%;");
+        $("#item-rcmd-body").toggleClass('overflow-y-hidden');
+        $(".item-focus-beforelogin").toggle();
+        $("#item-rcmd-body").scrollTop(0);
+    }
+<% if !@userlikeitems.include?(@input_record.id)%>
+    <% else %>
+    hide_rcmd()
+    <% end %>
+var imageurl = $("#item<%=@input_record.id%>>img").attr('src');
+$(".item-image").attr("style","background-image:url('"+imageurl+"')");
 </script>
