--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -881,8 +881,8 @@ margin-top:17vh;
   position: absolute;
   bottom:0;
   left:0;
-  height:52%;
-  width:100%;
+  height:52vh;
+  width:100vw;
   background:rgba(0,0,0,0.6);
   z-index:1;
   display:table;
