--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -879,7 +879,7 @@ margin-top:17vh;
 
 .item-focus-beforelogin{
   position: absolute;
-  bottom:0;
+  top:48%;
   left:0;
   height:52vh;
   width:100vw;
