--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -46,7 +46,8 @@
       </div>
     </div>
     <div class="modal-body overflow-y-hidden" style="height:100%;" id="item-rcmd-body">
-      <div class="item-focus-dummy"></div>
+      <div class="item-focus-dummy">
+      </div>
       <div class="item-focus-beforelogin" style=""><span>즐겨찾기에 추가하시면<br>추천 상품을 확인하실 수 있습니다</span></div>
       <div class="body-divide">
 
