--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -46,7 +46,7 @@
         var style = $("#스타일>.tag-button-clicked").attr('id');
         var purpose = $("#용도>.tag-button-clicked").attr('id');
         var index = $(".tag-browser>.tag-button-clicked").attr('id');
-
+        console.log("scrollevent");
         if(index===undefined){
             index = category;
         };
@@ -55,7 +55,7 @@
             index = "index";
         };
 
-        if($('body')[0].scrollHeight-browser.scrollTop()<browser.outerHeight()+150)
+        if($('body')[0].scrollHeight-browser.scrollTop()===browser.outerHeight()+90)
         {   console.log("90");
             if(switcher&end_param) {
                 $(".body-divide>.contents-loading:last-child").show();
@@ -80,13 +80,44 @@
                 });
                 page = page + 1;
                 switcher = false;
-                setTimeout(function(){switcher=true;},1000);
             }
             else{
                 console.log("timeout-90");
+                setTimeout(function(){switcher=true;},300);
+            }
+        }else if ($('body')[0].scrollHeight-browser.scrollTop()===browser.outerHeight()){
+            console.log("30");
+            if(switcher&end_param) {
+                console.log("30-go")
+                $(".body-divide>.contents-loading:last-child").show();
+
+                $("<div>").load("/slide_contents/item/" + index + "?page=" + page+"&hashtag="+style+','+purpose, function (data) {
+                    if(data==="nil"){
+                        $(".contents-loading").hide();
+                        end_param = false;
+                        $(".body-divide").attr('style','padding-bottom:15%;');
+                    }else {
+                        append_str = $(this).find(".body-divide");
+
+                        $(".browser-contents").find(".body-divide")[0].append(append_str[0]);
+                        $(".body-divide>.body-divide>div").unwrap();
+
+                        $(".browser-contents").find(".body-divide")[1].append(append_str[1]);
+                        $(".body-divide>.body-divide>div").unwrap();
+
+                        $(".contents-loading").hide();
+                    };
+
+                });
+                page = page + 1;
+                switcher = false;
+                setTimeout(function(){switcher=true;},500);
+            }
+            else{
+                console.log("timeout-30");
+                setTimeout(function(){switcher=true;},500);
             }
         }
-
 
 
     })
